--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Cruz, Francis Tyrone F.
+<html>
+  <head>
+    <title>IT0043 - TC01</title>
+  </head>
+</html>
+<body>
+  <h1>Cruz, Francis Tyrone F.</h1>
+  <h2>BSITCST - 202311944</h2>
+  <p></p>
+</body>
