--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
 <body>
   <h1>Cruz, Francis Tyrone F.</h1>
   <h2>BSITCST - 202311944</h2>
-  <p></p>
+  <p>Nandito na si Chito, si Chito Miranda
+Nandito na si Kiko, si Francis Magalona
+Nandito na si Gloc-9, wala siyang apelyido
+Magbabagsakan dito in five, four, three, two...</p>
 </body>
